--- a/sign.html
+++ b/sign.html
@@ -243,7 +243,7 @@ form .user-details .input-box{
           </label>
           <label for="dot-3">
             <span class="dot three"></span>
-            <span class="gender">Prefer not to say</span>
+            <span class="gender">Gay or Wot</span>
             </label>
           </div>
         </div>
